# image-information-2-text

./: .gitignore  Makefile  README.md  entrypoint.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
config/: cpu.yaml  evaluator.yaml  gpu.yaml
data/evaluations/1.4/: evaluation_results.csv
data/results/1.0-gpu/: results_granite3.2-vision:2b.csv  results_llava-llama3:8b.csv  results_llava:7b.csv  results_moondream:1.8b.csv  results_qwen2.5vl:3b.csv  results_qwen3-vl:2b.csv
data/results/1.1-gpu/: results_granite3.2-vision:2b.csv  results_llava-llama3:8b.csv  results_llava:7b.csv  results_moondream:1.8b.csv  results_qwen2.5vl:3b.csv  results_qwen3-vl:2b.csv
data/results/1.2-gpu/: results_granite3.2-vision:2b.csv  results_llava-llama3:8b.csv  results_llava:7b.csv  results_moondream:1.8b.csv  results_qwen2.5vl:3b.csv  results_qwen3-vl:2b.csv
data/results/1.4-gpu/: results_granite3.2-vision:2b.csv  results_llava-llama3:8b.csv  results_llava:7b.csv  results_moondream:1.8b.csv  results_qwen2.5vl:3b.csv  results_qwen3-vl:2b.csv
image_information_retrieval/ollama/: base.py  client.py  healthcheck.py
image_information_retrieval/utils/: downloader.py
notebook/: benchmark.ipynb  evaluator.ipynb  metrics.ipynb  ollama.ipynb
scripts/: download_data.py
visual_info_extractor/: benchmark.py  config.py  device.py  evaluator.py  inferencer.py  io.py  main.py
visual_info_extractor/ollama/: client.py  healthcheck.py
visual_info_extractor/utils/: downloader.py
