[tool.poetry]
name = "image-information-retrieval"
version = "0.1.0"
description = "\"Service that extracts information from images, then make these information available using a search retrieval system with embeddings.\""
authors = ["Paula Ito"]
readme = "README.md"
packages = [{include = "image_information_retrieval"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
requests = "^2.32.5"
pillow = "^12.0.0"
ipykernel = "^7.0.1"
pandas = "^2.3.3"
timm = "^1.0.20"
datasets = "^4.2.0"
nltk = "^3.9.2"
ipywidgets = "^8.1.7"
ollama = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
