[project]
name = "visual-info-extractor"
version = "0.1.0"
description = '"Service that extracts information from images, namely charts and diagrams, using VLMs."'
authors = [{ name = "Paula Ito" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
dependencies = [
    "datasets>=4.4.0",
    "ipykernel>=7.1.0",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["visual_info_extractor"]

[tool.hatch.build.targets.wheel]
include = ["visual_info_extractor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
